finished data and routing

--- a/TP1 FLask/templates/index.html
+++ b/TP1 FLask/templates/index.html
@@ -6,7 +6,6 @@
     <title>QuickStart 1.1</title>
 </head>
 <body>
-    Hello {{ name }} !
-    Template Fully Fonctionnal ! 
+    Hello my app !
 </body>
 </html>
