--- a/Resume_Online_Project/templates/index.html
+++ b/Resume_Online_Project/templates/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item", style="margin-top: 50px;"><a class="nav-link js-scroll-trigger" href="status"><p style="font-size:1.4em">[Update Status]</p></a></li>
                 </ul>
             </div>
         </nav>
